[gd_scene load_steps=5 format=2]

[ext_resource path="res://goat/helper_scenes/Inventory.gd" type="Script" id=1]
[ext_resource path="res://goat/environments/inventory_environment.tres" type="Environment" id=2]
[ext_resource path="res://goat/helper_scenes/RayCast3D.tscn" type="PackedScene" id=3]
[ext_resource path="res://goat/helper_scenes/InventoryItems.tscn" type="PackedScene" id=4]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 600, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="Inventory3D" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport/Inventory3D" groups=[
"goat_cameras",
]]
environment = ExtResource( 2 )
current = true
far = 5.0

[node name="RayCast3D" parent="ViewportContainer/Viewport/Inventory3D/Camera" instance=ExtResource( 3 )]
category = "inventory"
supports_alternative_interaction = false

[node name="Pivot" type="Spatial" parent="ViewportContainer/Viewport/Inventory3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="HiddenPivot" type="Spatial" parent="ViewportContainer/Viewport/Inventory3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="InventoryItems" parent="." instance=ExtResource( 4 )]
mouse_filter = 2

[node name="Tween" type="Tween" parent="."]
[connection signal="resized" from="." to="." method="_on_Inventory_resized"]
[connection signal="gui_input" from="ViewportContainer" to="." method="_on_ViewportContainer_gui_input"]
